<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--
        I used the constraint layout in this fragment because I wanted to put
        some of the views in different places and the constraint layout only the one
        who has managed to do that as far as I know till now unlike the linear layout
        that puts the views sequentially, either vertically or horizontally,
        and this is what made me use the constraint layout without the linear layout.
    -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InstructionScreenFragment">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="406dp"
            android:layout_height="280dp"
            android:src="@drawable/instruction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="449dp"
            android:layout_marginRight="@dimen/marginSET"
            android:layout_marginLeft="@dimen/marginSET"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    style="@style/InstructionTextViewStyle"
                    android:text="@string/instruction_content_one" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/InstructionTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/instruction_content_two" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/InstructionTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/instruction_content_three" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/InstructionTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/instruction_content_four" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/InstructionTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/instruction_content_five" />

                <Button
                    android:id="@+id/instructionButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="230dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="35dp"
                    android:text="@string/next"
                    android:textSize="@dimen/ButtonTextSize" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>