<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context = "com.example.shoestore.LogInFragment">

    <!--
        I used the constraint layout in this fragment because I wanted to put
        some of the views in different places and the constraint layout only the one
        who has managed to do that as far as I know till now unlike the linear layout
        that puts the views sequentially, either vertically or horizontally,
        and this is what made me use the constraint layout without the linear layout.

        also, here I am using the scroll view so that there are no items under the keyboard
        It causes an obstacle to the user while logging in.

        note:- you will find this comment in many of the different layouts
    -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginSET">


            <TextView
                android:id="@+id/helloTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/hello"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="70sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/loginAndSignupTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/login_or_sign_up_to_your_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/helloTextView" />

            <TextView
                android:id="@+id/emailLabel"
                style="@style/labelStyle"
                android:layout_marginTop="@dimen/marginLabelTop"
                android:text="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginAndSignupTextView" />

            <EditText
                android:id="@+id/editTextEmail"
                style="@style/contentStyle"
                android:hint="@string/your_email_id"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

            <TextView
                android:id="@+id/passwordLabel"
                style="@style/labelStyle"
                android:layout_marginTop="@dimen/marginSET"
                android:text="@string/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

            <EditText
                android:id="@+id/editTextPassword"
                style="@style/contentStyle"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />

            <Button
                android:id="@+id/btnCreateAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:text="@string/create_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnLogin"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                app:layout_constraintBaseline_toBaselineOf="@+id/btnCreateAccount"
                app:layout_constraintEnd_toStartOf="@+id/btnCreateAccount"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>