<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--
        I used the constraint layout in this fragment because I wanted to put
        some of the views in different places and the constraint layout only the one
        who has managed to do that as far as I know till now unlike the linear layout
        that puts the views sequentially, either vertically or horizontally,
        and this is what made me use the constraint layout without the linear layout.
    -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/marginSET"
        tools:context=".WelcomeScreenFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="406dp"
            android:layout_height="280dp"
            android:src="@drawable/welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_content_one"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_marginTop="30dp"
            android:text="@string/welcome_content_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            style="@style/TextWIstyle" />

        <TextView
            android:id="@+id/textView4"
            android:layout_marginTop="30dp"
            android:text="@string/welcome_content_three"
            style="@style/TextWIstyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/welcomeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="269dp"
            android:text="@string/next"
            android:textSize="@dimen/ButtonTextSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.948" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>